data/derived/fa15/progs/unify/prog0338.ml.out
Characters 112-131:
  let seen' = if (List.mem (h,seen)) 
                 ^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
